# scorpius3d

./: .tm_project.cache  Makefile  Makefile.am  Makefile.in  README.md  Scorpius09.prj  Scorpius09.prj.bak  Scorpius09.pws  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  potfiles
src/: BasicMovements.cpp  BasicMovements.h  BasicSkills.cpp  BasicSkills.h  Body.cpp  Body.h  Connection.cpp  Connection.h  Data.cpp  Data.h  Geometry.cpp  Geometry.h  HumanoidMovements.cpp  HumanoidMovements.h  Makefile  Makefile.am  Makefile.in  Player.h  SoccerSkills.cpp  SoccerSkills.h  WorldModel.cpp  WorldModel.h  WorldModelUpdate.cpp  in27.txt  in7.txt  main.cc  out1.txt  player.cpp  run.sh  types.cpp  types.h
src/.deps/: BasicMovements.Po  BasicSkills.Po  Body.Po  Connection.Po  Data.Po  Geometry.Po  HumanoidMovements.Po  SoccerSkills.Po  WorldModel.Po  WorldModelUpdate.Po  main.Po  player.Po  types.Po
