## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = scorpius

scorpius_SOURCES = \
	main.cc\
	BasicMovements.cpp\
	BasicMovements.h\
	BasicSkills.cpp\
	BasicSkills.h\
	Connection.cpp\
	Connection.h\
	Geometry.cpp\
	Geometry.h\
	HumanoidMovements.cpp\
	HumanoidMovements.h\
	Player.h\
	SoccerSkills.cpp\
	SoccerSkills.h\
	WorldModel.cpp\
	WorldModel.h\
	WorldModelUpdate.cpp\
	player.cpp\
	types.cpp\
	types.h\
	Data.h\
	Body.cpp\
	Body.h\
	Data.cpp

scorpius_LDFLAGS = 

scorpius_LDADD = 

